# gitty-backup-rs

./: .gitignore  Cargo.toml  README.md  notes.md
src/: commits.rs  fs_walk.rs  lib.rs  main.rs  model.rs  util.rs
src/database/: FSDatabase.rs  fs_database.rs  mod.rs
